fixed margin on mobile and search layout on mobile

--- a/mobileStyles.scss
+++ b/mobileStyles.scss
@@ -17,6 +17,10 @@ html {
     margin: 0;
     padding: 0;
   }
+
+  body {
+    width: 100%;
+  }
   
   nav {
     width: 100%;
@@ -103,7 +107,7 @@ a {
 }
 
 #toggle1:checked ~ .menu1 {
-  height: 340px;
+  height: 300px;
 }
 
 .p-menu1{
@@ -144,8 +148,7 @@ a {
 .link1 {
   width: 100%;
   margin: 0;
-  padding: 10px 0;
-  font: 700 20px 'Oswald', sans-serif;
+  font: 300 20px 'Oswald', sans-serif;
   color: black;
 }
 
@@ -162,9 +165,7 @@ a {
 .recentSearch {
   display: none;
   top: 0;
-  max-width: 500px;
   vertical-align: middle;
-  max-width: 700px !important;
   max-height: 35px;
   white-space: wrap;
 }
